fix: remove space in compare view on mobile that appears between header from table and page

--- a/src/index.scss
+++ b/src/index.scss
@@ -58,12 +58,7 @@
   width: max-content;
 }
 
-.table-row.fixed {
-  position: sticky;
-  top: 69px;
-  background-color: white;
-  z-index: 2;
-}
+
 
 #compare .cell {
   min-width: 160px;
